Fixed test method visibility for CandidateTest, changed Arrays.asList to List.of in TableFormatterTest